# esp32-home-automation

./: .gitignore  README.md
pi4/HomeAssistant/: configuration.yaml
security-camera/: .gitignore  CMakeLists.txt  sdkconfig
security-camera/main/: CMakeLists.txt  idf_component.yml  security-camera.c
security-camera/main/MQTT/: publisher.c  publisher.h
security-camera/main/WiFi/: WiFi.c
security-camera/main/camera/: camera.c  camera.h
smart-fridge/: CMakeLists.txt  sdkconfig
smart-fridge/main/: CMakeLists.txt  hello_world_main.c  idf_component.yml  main.c  thermistor.c  thermistor.h
smart-fridge/main/MQTT/: publisher.c  publisher.h
smart-fridge/main/WiFi/: WiFi.c  WiFi.h
smart-fridge/main/communication/: gpio_config.h  queues.c  queues.h  sensors.c  sensors.h
smart-fridge/main/control/: control.c  control.h
smart-fridge/main/data/: handle_humidity.c  handle_humidity.h  handle_temperature.c  handle_temperature.h
smart-fridge/main/drivers/: gpio_config.c  gpio_driver.c  gpio_driver.h  gpio_registers.h  i2c_driver.c  i2c_driver.h
smart-fridge/main/motors/: encoder.c  encoder.h  nema17.c  nema17.h
smart-fridge/main/motors/handlers/: calculate_angle.c  calculate_steps.c  calculate_steps.h
smart-fridge/main/sensors/: SHT_3x.c  SHT_3x.h  humidity_sensor.c  humidity_sensor.h  thermistor.c  thermistor.h
smart-fridge/main/test/: Makefile  runTests  temp_conversion_tdd.cpp
smart-fridge/requirements/: thermostatMotor.md
smart-fridge/test/: Makefile  calculateAngleTDD.cpp  calculateSteps_tdd.cpp  humidity_conversion_tdd.cpp  temp_conversion_tdd.cpp
temperature-control/: .gitignore  CMakeLists.txt  sdkconfig
temperature-control/main/: CMakeLists.txt  idf_component.yml  main.c
temperature-control/main/MQTT/: publisher.c  publisher.h
temperature-control/main/WiFi/: WiFi.c
temperature-control/main/communication/: queues.c  queues.h
temperature-control/main/control/: control.c
temperature-control/main/data/: handle_temperature.c  handle_temperature.h
temperature-control/main/drivers/: gpio_config.h  gpio_driver.c  gpio_driver.h  gpio_registers.h  i2c_driver.c  onewire.c  onewire.h
temperature-control/main/motors/: encoder.c  encoder.h  nema17.c  nema17.h
temperature-control/main/sensors/: humidity_sensor.c  humidity_sensor.h  thermistor.c  (+2 more)
temperature-control/requirements/: 1-Wire.md  ds18b20.md  thermostatMotor.md
temperature-control/test/: calculateAngleTDD.cpp  calculateSteps_tdd.cpp  humidity_conversion_tdd.cpp  main_tdd.cpp  temp_conversion_tdd.cpp
(+2 files in other folders)
