idf_component_register(SRCS "main.c"
                            "sensors/thermistor.c"
                            "sensors/SHT_3x.c"
                            "drivers/gpio_config.c"
                            "communication/queues.c"
                            "control/control.c"
                            "MQTT/publisher.c"
                            "WiFi/WiFi.c"
                            "drivers/gpio_driver.c"
                            "drivers/i2c_driver.c"
                            "motors/nema17.c"
                            "motors/handlers/calculate_steps.c"
                            "data/handle_temperature.c"
                            "data/handle_humidity.c"
                            "sensors/humidity_sensor.c"
                       PRIV_REQUIRES spi_flash mqtt nvs_flash esp_netif esp_wifi
                       INCLUDE_DIRS "config")
